login index+html

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body, html {
   width: 100vw;
   min-height: 100vh;
   background: #FFE1C6;
+  font-family: Calibri, Helvetica, sans-serif; 
 }
 
 #root {
@@ -88,5 +89,72 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+/*Login Page css*/
+button {
+  padding: 15px 25px;
+  border: unset;
+  border-radius: 15px;
+  color: #212121;
+  z-index: 1;
+  background: #e8e8e8;
+  position: relative;
+  font-weight: 1000;
+  font-size: 17px;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  overflow: hidden;
+ }
+ 
+ button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms
+ }
+ 
+ button:hover {
+  color: #e8e8e8;
+ }
+ 
+ button:hover::before {
+  width: 100%;
+ }
+
+form {   
+  padding: 20px;
+  border: 3px solid #838383ad;   
+}   
+
+input[type=text], input[type=password] {   
+  width: 100%;   
+  margin: 8px 0;  
+  padding: 12px 20px;   
+  display: inline-block;   
+  border: 2px solid rgb(0, 0, 0);   
+  box-sizing: border-box;   
+}  
+
+.btn {   
+  width: auto;   
+  padding: 10px 18px;  
+  margin: 10px 5px;  
+}   
+
+main {
+  max-width: 700px;
+  margin: auto;
+  padding: 0.5rem;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
