--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
 body, html {
-  padding: 0;
-  margin: 0;
+  padding: 200;
+  margin: auto;
+}
+
+main {
+  max-width: 700px;
+  margin: auto;
+  padding: 50px;
+  text-align: left;
 }
 
 * {
@@ -11,7 +18,7 @@ body, html {
 #root, body {
   width: 100vw;
   min-height: 100vh;
-  background: #FFE1C6;
+  background: #fff0e2;
   font-family: Calibri, Helvetica, sans-serif; 
 }
 
@@ -92,13 +99,34 @@ body, html {
 }
 
 /*Login Page css*/
+label{
+  color:#f56db1;
+  padding: 5px;
+  border: 2px solid #0000003a;
+}
+
+input[type=text], input[type=password] {   
+  width: 100%;
+  margin: 8px 0;  
+  padding: 12px 20px;
+  display: inline-block;   
+  border: 2px solid rgb(0, 0, 0);   
+  box-sizing: border-box;   
+}  
+
+.center-img{
+  display: flex;
+  justify-content: center;
+}
+
+
 button {
-  padding: 15px 25px;
+  /*padding: 15px 25px;*/
   border: unset;
-  border-radius: 15px;
-  color: #212121;
+  border-radius: 5px;
+  color: #ffffff;
   z-index: 1;
-  background: #e8e8e8;
+  background: #f56db1;
   position: relative;
   font-weight: 1000;
   font-size: 17px;
@@ -115,11 +143,9 @@ button {
   left: 0;
   height: 100%;
   width: 0;
-  border-radius: 15px;
-  background-color: #212121;
+  border-radius: 5px;
+  background-color: #015f0d;
   z-index: -1;
-  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
-  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
   transition: all 250ms
  }
  
@@ -131,30 +157,18 @@ button {
   width: 100%;
  }
 
-form {   
-  padding: 20px;
-  border: 3px solid #838383ad;   
-}   
-
-input[type=text], input[type=password] {   
-  width: 100%;   
-  margin: 8px 0;  
-  padding: 12px 20px;   
-  display: inline-block;   
-  border: 2px solid rgb(0, 0, 0);   
-  box-sizing: border-box;   
-}  
+.center-btn {
+  display: flex;
+  justify-content: center;
+}
 
 .btn {   
-  width: auto;   
+  /*display: flex;
+  justify-content: center;*/
+  width: 200px;   
   padding: 10px 18px;  
   margin: 10px 5px;  
 }   
 
-main {
-  max-width: 700px;
-  margin: auto;
-  padding: 0.5rem;
-  text-align: center;
-}
+
 /*# sourceMappingURL=style.css.map */
