--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   padding: 200;
   margin: auto;
 }
@@ -12,14 +13,15 @@ main {
 
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-#root, body {
+#root,
+body {
   width: 100vw;
   min-height: 100vh;
   background: #fff0e2;
-  font-family: Calibri, Helvetica, sans-serif; 
+  font-family: Calibri, Helvetica, sans-serif;
 }
 
 #root {
@@ -28,8 +30,8 @@ main {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 #topbar {
@@ -40,47 +42,47 @@ main {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 #topbar span {
   font-size: 3.5em;
-  color: #FFC6D9;
+  color: #ffc6d9;
   cursor: pointer;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #content {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .card {
-  border: 5px solid #FFC6D9;
+  border: 5px solid #ffc6d9;
   border-radius: 20px;
   width: 80vw;
   max-width: 380px;
@@ -94,36 +96,37 @@ main {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 /*Login Page css*/
-label{
-  color:#f56db1;
- /* padding: 5px;
-  border: 2px solid #0000003a;*/
+form label {
+  color: #f56db1;
+  font-weight: bold;
 }
 
-input[type=text], input[type=password] {   
+form label:last-of-type {
+  display: flex;
+  align-items: center;
+}
+
+input[type='text'],
+input[type='password'] {
   width: 100%;
-  margin: 8px 0;  
+  margin: 8px 0;
   padding: 12px 20px;
-  display: inline-block;   
+  display: inline-block;
   background-color: transparent;
   border-spacing: auto;
   border-color: transparent;
-  border-bottom: solid rgb(255, 28, 255);
-  
-  
-   
-}  
+  border-bottom: solid #f56db1;
+}
 
-.center-img{
+.center-img {
   display: flex;
   justify-content: center;
 }
-
 
 button {
   /*padding: 15px 25px;*/
@@ -135,14 +138,15 @@ button {
   position: relative;
   font-weight: 1000;
   font-size: 17px;
-  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
-  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
   transition: all 250ms;
   overflow: hidden;
- }
- 
- button::before {
-  content: "";
+  cursor: pointer;
+}
+
+button::before {
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -151,29 +155,26 @@ button {
   border-radius: 5px;
   background-color: #015f0d;
   z-index: -1;
-  transition: all 250ms
- }
- 
- button:hover {
+  transition: all 250ms;
+}
+
+button:hover {
   color: #e8e8e8;
- }
- 
- button:hover::before {
-  width: 100%;
- }
+}
+
+button:hover::before {
+  /* width: 100%; */
+}
 
 .center-btn {
   display: flex;
   justify-content: center;
 }
 
-.btn {   
+.btn {
   /*display: flex;
   justify-content: center;*/
-  width: 200px;   
-  padding: 10px 18px;  
-  margin: 10px 5px;  
-}   
-
-
-/*# sourceMappingURL=style.css.map */
+  width: 200px;
+  padding: 10px 18px;
+  margin: 10px 5px;
+}
