--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ main {
 }
 
 * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -25,29 +24,16 @@ body {
 }
 
 #root {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 #topbar {
   width: 100%;
   height: 8vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -ms-flex-pack: distribute;
   justify-content: space-around;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -55,49 +41,46 @@ body {
   font-size: 3.5em;
   color: #f56db1;
   cursor: pointer;
-  -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
 
 #content {
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
   flex-grow: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -ms-flex-line-pack: center;
-  align-content: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .card {
-  border: 5px solid #f56db1;
+  background: #e5e5e5;
   border-radius: 20px;
   width: 80vw;
   max-width: 380px;
   margin: 1ch;
   padding: 1ch;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.card .card-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.card div {
+  min-width: 50%;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card p {
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+}
+
+.card h3 {
+  margin: .3em 0;
 }
 
 /*Login Page css*/
@@ -140,7 +123,6 @@ button {
   position: relative;
   font-weight: 1000;
   font-size: 17px;
-  -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
   box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
   transition: all 250ms;
   overflow: hidden;
@@ -261,4 +243,24 @@ input:checked + .slider:before {
 
 #role {
   display: block;
+
+segment {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 85%;
+}
+segment:first-of-type h3 {
+  text-align: right;
+  margin-right: 2ch;
+  width: 100%;
+}
+
+segment h2 {
+  text-align: right;
+  width: 100%;
+  margin: 0.5em 0; /*default is .83em*/
+  border-bottom: 2px solid gray;
+
 }
