--- a/css/style.css
+++ b/css/style.css
@@ -113,55 +113,139 @@ select {
   justify-content: center;
 }
 
-button {
-  /*padding: 15px 25px;*/
-  border: unset;
-  border-radius: 5px;
-  color: #ffffff;
-  z-index: 1;
-  background: #f56db1;
-  position: relative;
-  font-weight: 1000;
-  font-size: 17px;
-  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
-  transition: all 250ms;
-  overflow: hidden;
-  cursor: pointer;
+.pwd {
+  display: flex;
+  justify-content:space-around;
 }
 
-button::before {
-  content: '';
+.btn-pwd{
+  height: 50px;
+  background: #ff0000;
+  font-weight: 500;
+}
+
+/* From uiverse.io */
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+ }
+
+ .btn-pwd{
+  padding: 1em ;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 1000;
+  border-radius: 45px;
+  color: #000;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+ }
+
+ .btn-pwd:hover {
+  background-color: #f56db1;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+  color: #fff;
+  font-weight: 1200;
+  transform: translateY(-7px);
+}
+
+.btn-pwd:active {
+  transform: translateY(-1px);
+}
+ 
+ button.learn-more {
+  width: 12rem;
+  height: auto;
+ }
+ 
+ button.learn-more .circle {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  background: #282936;
+  border-radius: 1.625rem;
+ }
+ 
+ button.learn-more .circle .icon {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #fff;
+ }
+ 
+ button.learn-more .circle .icon.arrow {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  left: 0.625rem;
+  width: 1.125rem;
+  height: 0.125rem;
+  background: none;
+ }
+ 
+ button.learn-more .circle .icon.arrow::before {
+  position: absolute;
+  content: "";
+  top: -0.29rem;
+  right: 0.0625rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  border-top: 0.125rem solid #fff;
+  border-right: 0.125rem solid #fff;
+  transform: rotate(45deg);
+ }
+ 
+ button.learn-more .button-text {
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 0;
-  border-radius: 5px;
-  background-color: #015f0d;
-  z-index: -1;
-  transition: all 250ms;
-}
-
-button:hover {
-  color: #e8e8e8;
-}
-
-button:hover::before {
-  /* width: 100%; */
-}
+  right: 0;
+  bottom: 0;
+  padding: 0.75rem 0;
+  margin: 0 0 0 1.85rem;
+  color: #282936;
+  font-weight: 700;
+  line-height: 1.6;
+  text-align: center;
+  text-transform: uppercase;
+ }
+ 
+ button:hover .circle {
+  width: 100%;
+ }
+ 
+ button:hover .circle .icon.arrow {
+  background: #fff;
+  transform: translate(1rem, 0);
+ }
+ 
+ button:hover .button-text {
+  color: #fff;
+ }
 
 .center-btn {
+  padding: 5%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 
-.btn {
-  /*display: flex;
-  justify-content: center;*/
-  width: 200px;
-  padding: 10px 18px;
-  margin: 10px 5px;
-}
 
 div#headertext {
   display: flex;
