--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
   width: 100vw;
   min-height: 100vh;
   background: #fff0e2;
+  color: #595959;
   font-family: Calibri, Helvetica, sans-serif;
 }
 
@@ -31,11 +32,27 @@ body {
 
 #topbar {
   width: 100%;
-  height: 8vh;
+  height: 14vh;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  border-bottom: 2px solid white;
+  
+}
+
+.intopbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #f56db1;
+}
+
+hr {
+  background-color: white;
+  color: white;
+  box-shadow: none;
+  width: 100%;
 }
 
 #topbar span {
