--- a/css/style.css
+++ b/css/style.css
@@ -1,103 +1,105 @@
 body,
 html {
-  padding: 200;
-  margin: auto;
+    padding: 200;
+    margin: auto;
 }
 
 main {
-  max-width: 700px;
-  margin: auto;
-  padding: 50px;
-  text-align: left;
+    max-width: 700px;
+    margin: auto;
+    padding: 50px;
+    text-align: left;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 #root,
 body {
-  overflow-x: hidden;
-  width: 100vw;
-  min-height: 100vh;
-  background: #fff0e2;
-  font-family: Calibri, Helvetica, sans-serif;
+    overflow-x: hidden;
+    width: 100vw;
+    min-height: 100vh;
+    background: #fff0e2;
+    font-family: Calibri, Helvetica, sans-serif;
 }
 
 #root {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 #topbar {
-  width: 100%;
-  height: 8vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+    width: 100%;
+    height: 8vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #topbar span {
-  font-size: 3.5em;
-  color: #f56db1;
-  cursor: pointer;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    font-size: 3.5em;
+    color: #f56db1;
+    cursor: pointer;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #content {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .card {
-  background: #e5e5e5;
-  border-radius: 20px;
-  width: 80vw;
-  max-width: 380px;
-  margin: 1ch;
-  padding: 1ch;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+    background: #e5e5e5;
+    border-radius: 20px;
+    width: 80vw;
+    max-width: 380px;
+    margin: 1ch;
+    padding: 1ch;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .card div {
-  max-width: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    max-width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .card p {
-  width: 100%;
-  text-align: center;
-  font-style: italic;
+    width: 100%;
+    text-align: center;
+    font-style: italic;
 }
 
 .card span {
-  text-align: center;
+    text-align: center;
 }
 
 .card h3 {
-  margin: 0.3em 0;
+    margin: 0.3em 0;
 }
 
+
 /*Login Page css*/
+
 form label {
-  color: #f56db1;
-  font-weight: bold;
+    color: #f56db1;
+    font-weight: bold;
 }
 
 form label:last-of-type {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 input[type='text'],
@@ -105,191 +107,203 @@ input[type='password'],
 input[type='email'],
 input[type='name'],
 select {
-  width: 100%;
-  margin: 8px 0;
-  padding: 12px 20px;
-  display: inline-block;
-  background-color: transparent;
-  border-spacing: auto;
-  border-color: transparent;
-  border-bottom: solid #f56db1;
+    width: 100%;
+    margin: 8px 0;
+    padding: 12px 20px;
+    display: inline-block;
+    background-color: transparent;
+    border-spacing: auto;
+    border-color: transparent;
+    border-bottom: solid #f56db1;
 }
 
 .center-img {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 button {
-  /*padding: 15px 25px;*/
-  border: unset;
-  border-radius: 5px;
-  color: #ffffff;
-  z-index: 1;
-  background: #f56db1;
-  position: relative;
-  font-weight: 1000;
-  font-size: 17px;
-  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
-  transition: all 250ms;
-  overflow: hidden;
-  cursor: pointer;
+    /*padding: 15px 25px;*/
+    border: unset;
+    border-radius: 5px;
+    color: #ffffff;
+    z-index: 1;
+    background: #f56db1;
+    position: relative;
+    font-weight: 1000;
+    font-size: 17px;
+    box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    transition: all 250ms;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 button::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 0;
-  border-radius: 5px;
-  background-color: #015f0d;
-  z-index: -1;
-  transition: all 250ms;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    border-radius: 5px;
+    background-color: #015f0d;
+    z-index: -1;
+    transition: all 250ms;
 }
 
 button:hover {
-  color: #e8e8e8;
+    color: #e8e8e8;
 }
 
 button:hover::before {
-  /* width: 100%; */
+    /* width: 100%; */
 }
 
 .center-btn {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .btn {
-  /*display: flex;
+    /*display: flex;
   justify-content: center;*/
-  width: 200px;
-  padding: 10px 18px;
-  margin: 10px 5px;
+    width: 200px;
+    padding: 10px 18px;
+    margin: 10px 5px;
 }
 
 div#headertext {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 #switch {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
+
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-  margin-bottom: 10px;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin-bottom: 10px;
 }
 
 .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
 }
 
 .slider:before {
-  position: absolute;
-  content: '';
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+    position: absolute;
+    content: '';
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
 }
 
-input:checked + .slider {
-  background-color: #f56db1;
+input:checked+.slider {
+    background-color: #f56db1;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #f56db1;
+input:focus+.slider {
+    box-shadow: 0 0 1px #f56db1;
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
 }
+
 
 /* Rounded sliders */
+
 .slider.round {
-  border-radius: 34px;
+    border-radius: 34px;
 }
 
 .slider.round:before {
-  border-radius: 50%;
+    border-radius: 50%;
 }
 
 #register-header {
-  display: block;
+    display: block;
 }
+
 #login-header {
-  display: none;
+    display: none;
 }
 
 #role {
-  display: block;
+    display: block;
 }
+
 segment {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 85%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 85%;
 }
+
 segment:first-of-type h3 {
-  text-align: right;
-  margin-right: 2ch;
-  width: 100%;
+    text-align: right;
+    margin-right: 2ch;
+    width: 100%;
 }
 
 segment h2 {
-  text-align: right;
-  width: 100%;
-  margin: 0.5em 0; /*default is .83em*/
-  border-bottom: 2px solid gray;
+    text-align: right;
+    width: 100%;
+    margin: 0.5em 0;
+    /*default is .83em*/
+    border-bottom: 2px solid gray;
 }
 
 #newBtn {
-  position: fixed;
-  right: 2vh;
-  bottom: 2vh;
-  width: min(8vh, 80px);
-  height: min(8vh, 80px);
-  border-radius: min(8vh, 80px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: fixed;
+    right: 2vh;
+    bottom: 2vh;
+    width: min(8vh, 80px);
+    height: min(8vh, 80px);
+    border-radius: min(8vh, 80px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #newBtn a {
-  text-decoration: none;
-  color: inherit;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #newBtn .material-icons {
-  font-size: 4vh;
+    font-size: 4vh;
+}
+
+#errors {
+    color: red;
+    font-weight: bold;
 }
