--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid gray;
   
 }
 
